[gd_scene load_steps=12 format=3 uid="uid://ccxljq4722nd4"]

[ext_resource type="Script" path="res://data/game_systems/Player.gd" id="1_bt42k"]
[ext_resource type="PackedScene" uid="uid://dtj4xjjqlmqmo" path="res://data/game_systems/movement/state_manager.tscn" id="2_6qpuk"]
[ext_resource type="Script" path="res://data/game_systems/interact_ray.gd" id="3_61e3u"]
[ext_resource type="PackedScene" uid="uid://cduuq8koek2go" path="res://data/game_systems/UI/in_game_ui.tscn" id="4_pngph"]

[sub_resource type="Gradient" id="Gradient_2nc8r"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.0813008, 0.910569)
colors = PackedColorArray(0, 0.470588, 0.831373, 1, 1, 1, 1, 1, 0, 0.470588, 0.831373, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sywfl"]
gradient = SubResource("Gradient_2nc8r")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jrpxw"]
albedo_texture = SubResource("GradientTexture1D_sywfl")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_58mr4"]
radius = 0.25
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1ei3j"]
radius = 0.25
height = 1.5

[sub_resource type="SphereShape3D" id="SphereShape3D_fghep"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_wsp3x"]
radius = 2.0

[node name="Player" type="CharacterBody3D"]
platform_floor_layers = 1
platform_wall_layers = 4
script = ExtResource("1_bt42k")

[node name="UI" parent="." instance=ExtResource("4_pngph")]
mouse_filter = 1

[node name="visuals" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
material_override = SubResource("StandardMaterial3D_jrpxw")
mesh = SubResource("CapsuleMesh_58mr4")
skeleton = NodePath("../..")

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_1ei3j")

[node name="SpringArmPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="Roller" type="Node3D" parent="SpringArmPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0, 0)

[node name="SpringArm" type="SpringArm3D" parent="SpringArmPivot/Roller"]
shape = SubResource("SphereShape3D_fghep")
spring_length = 3.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="SpringArmPivot/Roller/SpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.30881, 10)

[node name="interact_ray" type="RayCast3D" parent="SpringArmPivot/Roller/SpringArm/Camera3D"]
target_position = Vector3(0, 0, -20)
collision_mask = 16
script = ExtResource("3_61e3u")

[node name="animations" type="AnimationPlayer" parent="."]

[node name="StateManager" parent="." instance=ExtResource("2_6qpuk")]

[node name="swim_level" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="interact_area" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
collision_layer = 4096
collision_mask = 4096

[node name="collider" type="CollisionShape3D" parent="interact_area"]
shape = SubResource("SphereShape3D_wsp3x")

[editable path="StateManager"]
